add javsp proxy group

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -47,6 +47,7 @@ update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Conf
 🚚Amazon = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 📡Speedtest = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🍎苹果服务 = select,🚀直接连接,🔰国外流量,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+🔞JavSP = select,🇯🇵 AIRPORT-JP,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🔽IDM = select,🚀直接连接,🔰国外流量
 🚀直接连接 = select,DIRECT
 AIRPORT = url-test,url=http://www.gstatic.com/generate_204,interval=86400,tolerance=100,timeout=5,select=0,policy-regex-filter=*
@@ -105,6 +106,7 @@ RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/PayPal.yaml,🧧Paypal
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Discord.yaml,🎙Discord
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Facebook.yaml,📘Facebook 
+RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/JavSP.yaml,🔞JavSP
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Proxy.yaml,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Direct.yaml,DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/IDM.yaml,🔽IDM
