add reddit ruleset and group

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -22,6 +22,7 @@ update-url = https://cdn.jsdelivr.net/gh/zuluion/ShadowRocket-Template-Rule-Conf
 ✈️Telegram = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🎙Discord = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 📘Facebook = select,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
+📕Reddit = select,🇺🇸 AIRPORT-US,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖OpenAI = select,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇺🇸 AIRPORT-US,🇮🇳 AIRPORT-India,🇬🇧 AIRPORT-EN,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖Claude = select,🇬🇧 AIRPORT-EN,🇺🇸 AIRPORT-US,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
 🤖Gemini = select,🇺🇸 AIRPORT-US,🇬🇧 AIRPORT-EN,🔰国外流量,🚀直接连接,🇭🇰 AIRPORT-HK,🇨🇳 AIRPORT-TW,🇸🇬 AIRPORT-SG,🇯🇵 AIRPORT-JP,🇰🇷 AIRPORT-Korea,🇮🇳 AIRPORT-India,🇮🇪 AIRPORT-Ireland,🇷🇺 AIRPORT-RU,🇨🇦 AIRPORT-Canada,🇫🇷 AIRPORT-FR,🇦🇺 AIRPORT-AU,AIRPORT
@@ -106,6 +107,7 @@ RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/PayPal.yaml,🧧Paypal
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Discord.yaml,🎙Discord
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Facebook.yaml,📘Facebook 
+RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Reddit.yaml,📕Reddit 
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/JavSP.yaml,🔞JavSP
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Proxy.yaml,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Direct.yaml,DIRECT
