add appinn rule to solve the image loading problem

--- a/ShadowRocket-Template-Rule-Config.conf
+++ b/ShadowRocket-Template-Rule-Config.conf
@@ -72,6 +72,7 @@ DOMAIN-KEYWORD,aria2,DIRECT
 DOMAIN,clash.razord.top,DIRECT
 DOMAIN-SUFFIX,lancache.steamcontent.com,DIRECT
 DOMAIN,yacd.haishan.me,🔰国外流量
+DOMAIN-SUFFIX,appinn.com,🔰国外流量
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/OpenAI.yaml,🤖OpenAI
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Claude.yaml,🤖Claude
 RULE-SET,https://cdn.jsdelivr.net/gh/zuluion/Clash-Template-Config@master/Filter/Gemini.yaml,🤖Gemini
